--- a/luna2.html
+++ b/luna2.html
@@ -49,7 +49,7 @@
                 <td><button class="sub" type="submit" onclick="message()">Submit</button></td>
             </tr>
             <tr>
-                <td><h2>Hey you!</h2><h1 id="mes" style="color: red;"></h1></td>
+                <td><h1 id="mes" style="color: red;"></h1></td>
                 
             </tr>
         </table>
